--- a/index.html
+++ b/index.html
@@ -3203,6 +3203,9 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
     <span class="na">categories</span><span class="pi">:</span> <span class="s">environment</span>
     <span class="na">created</span><span class="pi">:</span> <span class="s">2023-11-12</span>
     <span class="na">updated</span><span class="pi">:</span> <span class="s">2025-06-30</span>
+    <span class="na">unit</span><span class="pi">:</span> <span class="s">triel</span>
+    <span class="na">priceCurrency</span><span class="pi">:</span> <span class="s">EUR</span>
+    <span class="na">price</span><span class="pi">:</span> <span class="m">0.00</span>
 
   <span class="pi">-</span> <span class="na">productId</span><span class="pi">:</span> <span class="s">traffic-accidents</span>
     <span class="na">name</span><span class="pi">:</span> <span class="s">Traffic Accidents in Abu Dhabi</span>
@@ -3390,6 +3393,30 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
 <td>string</td>
 <td>-</td>
 <td>Product rating, example 4/5 or 3.2/10. The latter number indicates maximum and first the aggregated rating</td>
+</tr>
+<tr>
+<td><strong>priceCurrency</strong></td>
+<td>string</td>
+<td>Use standard formats: <a href="https://en.wikipedia.org/wiki/ISO_4217">ISO 4217</a> currency format e.g. &quot;USD&quot;; Ticker symbol for cryptocurrencies e.g. &quot;BTC&quot;</td>
+<td>The primary currency used in pricing. Platforms are assumed to use this as primary currency if currency conversions are used to display product pricing in different locations for various currencies. If the <em>unit</em> is revenue-sharing, then this attribute value MUST be percentage.</td>
+</tr>
+<tr>
+<td><strong>price</strong></td>
+<td>string</td>
+<td>-</td>
+<td>The offer price of a product, or of a price component, or revenue-sharing percentage. <br/><br/> If the <em>unit</em> of pricing is revenue-sharing, then this <em>price</em> attribute value is percentage value. <br/><br/> Use &#39;.&#39; (Unicode &#39;FULL STOP&#39; (U+002E)) rather than &#39;,&#39; to indicate a decimal point. Avoid using these symbols as a readability separator. Use values from 0123456789 (Unicode &#39;DIGIT ZERO&#39; (U+0030) to &#39;DIGIT NINE&#39; (U+0039)) rather than superficially similiar Unicode symbols. <br/><br/>With <em>data-volume</em> the price is for each 1GB of data.</td>
+</tr>
+<tr>
+<td><strong>billingDuration</strong></td>
+<td>string</td>
+<td>options: instant, day, week, month, year</td>
+<td>Specifies for how long this price (or price component) will be billed. Can be used, for example, to model the contractual duration of a subscription or payment plan.</td>
+</tr>
+<tr>
+<td><strong>unit</strong></td>
+<td>string</td>
+<td>One of: One-time-payment, Pay-per-use, Recurring, Revenue-sharing, Data-volume , Pay-what-you-want, Freemium, Open-data, Value-based, On-request, Trial</td>
+<td>One-time-payment is for single time purchase purposes, further purchaces are not intended to continue under same agreement. <br/><br/> <em>Pay-per-use</em> is intended for continuous usage and price set is for each successful usage action. <br/><br/> <em>Recurrring</em> is intended for continuous time period plans. <br/><br/><em>Revenue sharing</em> is a performance-based income model. An effective revenue sharing deal structure is offering your expertise to a business owner to help them grow their business. In return, you get paid a percentage of the revenue as a royalty fee. <br/><br/> <em>Freemium</em> is for free access. Use this option also for open data. <br/><br/> <em>Data-volume</em> is for data amount based pricing in which customer pays based on the served data amount. The price is always for 1GB of data. <br/><br/> <em>Pay-what-you-want</em>  is a pricing system where buyers pay any desired amount for a given commodity, sometimes including zero. In some cases, a minimum (floor) price may be set, and/or a suggested price may be indicated as guidance for the buyer. The buyer can also select an amount higher than the standard price for the commodity. If the floor price is set, use <em>minPrice</em> attribute. <br/><br/> <em>Open-data</em>  is an explicit pricing plan category for open data. By default open data should be free, but in some cases it can have a price. <br/><br/> <em>Value-based</em> is value-based selling unit. Present the outcome of your story with solid data and a measurable impact with help of <em>offering</em> attribute. Example: “We can lower the energy bill in heating by $8-13/square meter in a year. Try out simulator to calculate your value!”. Use optional <em>valueSimulator</em> attribute to provide link (URL) to value simulator you have created. In order to set base fee for value-based plan, you can for example set monthly (<em>billingDuration</em>) plan with base see with help of <em>minPrice</em> attribute. <br/><br/> <em>On-request</em> is for plans in which customer is given access to data product after contacting provider.</td>
 </tr>
 </tbody></table>
 
