deploy: 84ec9e1ecebbe68910a8bbb4334f932461b62ca7

--- a/index.html
+++ b/index.html
@@ -3203,7 +3203,7 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
     <span class="na">categories</span><span class="pi">:</span> <span class="s">environment</span>
     <span class="na">created</span><span class="pi">:</span> <span class="s">2023-11-12</span>
     <span class="na">updated</span><span class="pi">:</span> <span class="s">2025-06-30</span>
-    <span class="na">unit</span><span class="pi">:</span> <span class="s">triel</span>
+    <span class="na">unit</span><span class="pi">:</span> <span class="s">trial</span>
     <span class="na">priceCurrency</span><span class="pi">:</span> <span class="s">EUR</span>
     <span class="na">price</span><span class="pi">:</span> <span class="m">0.00</span>
 
@@ -3217,6 +3217,9 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
     <span class="na">categories</span><span class="pi">:</span> <span class="s">transport</span>
     <span class="na">created</span><span class="pi">:</span> <span class="s">2024-04-10</span>
     <span class="na">updated</span><span class="pi">:</span> <span class="s">2025-05-28</span>
+    <span class="na">unit</span><span class="pi">:</span> <span class="s">open-data</span>
+    <span class="na">priceCurrency</span><span class="pi">:</span> <span class="s">EUR</span>
+    <span class="na">price</span><span class="pi">:</span> <span class="m">0.00</span>
 
   <span class="pi">-</span> <span class="na">productId</span><span class="pi">:</span> <span class="s">water-consumption</span>
     <span class="na">name</span><span class="pi">:</span> <span class="s">Water Consumption by District</span>
