--- a/index.html
+++ b/index.html
@@ -3206,6 +3206,7 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
     <span class="na">unit</span><span class="pi">:</span> <span class="s">trial</span>
     <span class="na">priceCurrency</span><span class="pi">:</span> <span class="s">EUR</span>
     <span class="na">price</span><span class="pi">:</span> <span class="m">0.00</span>
+    <span class="na">rating</span><span class="pi">:</span> <span class="s">4/5</span>
 
   <span class="pi">-</span> <span class="na">productId</span><span class="pi">:</span> <span class="s">traffic-accidents</span>
     <span class="na">name</span><span class="pi">:</span> <span class="s">Traffic Accidents in Abu Dhabi</span>
@@ -3220,6 +3221,7 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
     <span class="na">unit</span><span class="pi">:</span> <span class="s">open-data</span>
     <span class="na">priceCurrency</span><span class="pi">:</span> <span class="s">EUR</span>
     <span class="na">price</span><span class="pi">:</span> <span class="m">0.00</span>
+    <span class="na">rating</span><span class="pi">:</span> <span class="s">4.5/5</span>
 
   <span class="pi">-</span> <span class="na">productId</span><span class="pi">:</span> <span class="s">water-consumption</span>
     <span class="na">name</span><span class="pi">:</span> <span class="s">Water Consumption by District</span>
@@ -3231,6 +3233,7 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
     <span class="na">categories</span><span class="pi">:</span> <span class="pi">[</span><span class="s2">"</span><span class="s">utilities"</span><span class="pi">]</span>
     <span class="na">created</span><span class="pi">:</span> <span class="s">2023-07-01</span>
     <span class="na">updated</span><span class="pi">:</span> <span class="s">2025-04-15</span>
+    <span class="na">rating</span><span class="pi">:</span> <span class="s">3.9/5</span>
 
 
 
