deploy: 4f431adae4e773e0b37852916c383121e99d2bbc

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <link rel="icon" href="https://data-product-business.github.io/open-data-product-spec/images/favicon-bc890431.png"/>
     <meta charset="utf-8">
-    <meta property="og:title" content="Open Data Product Specification Development Version" />
-    <meta property="og:url" content="https://opendataproducts.org/dev/" />
+    <meta property="og:title" content="Open Data Product Specification 4.0 - Release Version" />
+    <meta property="og:url" content="https://opendataproducts.org/v4.0/" />
     <meta property=”og:type” content=”website” />
     <meta property="og:image" content="https://camo.githubusercontent.com/899d761afc97f791f9b3b5950427cdeb5c1e087d0b90af249e6be9a4c1119973/68747470733a2f2f6f70656e6461746170726f64756374732e6f72672f696d672f70726f66696c652e706e67" />
     <meta property="og:description" 
