--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Open Data Product Specification 4.0 - Release Version" />
     <meta property="og:url" content="https://opendataproducts.org/v4.0/" />
     <meta property=”og:type” content=”website” />
-    <meta property="og:image" content="https://camo.githubusercontent.com/899d761afc97f791f9b3b5950427cdeb5c1e087d0b90af249e6be9a4c1119973/68747470733a2f2f6f70656e6461746170726f64756374732e6f72672f696d672f70726f66696c652e706e67" />
+    <meta property="og:image" content="https://opendataproducts.org/images/social.png" />
     <meta property="og:description" 
     content="The Open Data Product Specification is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products." />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
