deploy: a40396c714c98289676826cf1cb6a161187d3935

--- a/index.html
+++ b/index.html
@@ -550,6 +550,8 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <p>The content is modular, code‑first, and designed for easy reuse, enabling teams to discover, govern, monetize, validate, and automate data products using standardized, machine-readable metadata. Users are encouraged to contribute new scenarios or enhancements via GitHub issues.</p>
 
 <p><a href="https://opendataproducts.org/howto/">Knowledge Base in Github</a>. </p>
+
+<p><a href="https://www.udemy.com/course/master-the-open-data-product-specification-with-gpt-tool">Udemy course - Master the Leading Data Product Specification with GPT tool</a></p>
 <h2 id='specification-aims-and-aspects'>Specification aims and aspects</h2>
 <p><strong>Specification aims:</strong></p>
 
