deploy: 5a0405b9cc3880523b38f9e2c31d6cbdff34c5e1

--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>schema</strong></td>
 <td>URL</td>
 <td>Valid URL. See more from <a href="https://datatracker.ietf.org/doc/html/rfc3986">RFC 3986</a>.</td>
-<td><strong>REQUIRED</strong> Defines the URL of Schema. Used often for validation purposes.</td>
+<td><strong>REQUIRED</strong> Defines the URL of Schema. Used often for validation purposes. <a href="https://opendataproducts.org/v4.0/schema/odps.json"><strong>JSON Schema</strong></a> available as well.</td>
 </tr>
 <tr>
 <td><strong>version</strong></td>
