--- a/index.html
+++ b/index.html
@@ -515,6 +515,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 <ul>
 <li><a href="https://opendataproducts.org/v4.0/schema/odps.yaml">YAML Schema</a></li>
+<li><a href="https://opendataproducts.org/v4.0/schema/odps.json">JSON Schema</a></li>
 </ul>
 
 <p><strong>Participate:</strong></p>
