deploy: 9ca308f2c9cedffa2656d681144f272801e1f902

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ This release makes ODPS the first open specification where data products declare
 
 <ol>
 <li>technical (infrastructure &amp; access), </li>
-<li>business (pricing &amp; plans), </li>
+<li>business (product strategy &amp; pricing &amp; plans), </li>
 <li>legal (licensing &amp; IPR), and </li>
 <li>ethical (privacy &amp; mydata). </li>
 </ol>
