deploy: 2e5b435deac60b41ceedad562b89cf8388ba975c

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <link rel="icon" href="https://data-product-business.github.io/open-data-product-spec/images/favicon-bc890431.png"/>
     <meta charset="utf-8">
-    <meta property="og:title" content="Open Data Product Specification - Development Version" />
-    <meta property="og:url" content="https://opendataproducts.org/dev" />
+    <meta property="og:title" content="Open Data Product Specification - Release Candidate" />
+    <meta property="og:url" content="https://opendataproducts.org/v4.1rc" />
     <meta property=”og:type” content=”website” />
     <meta property="og:image" content="https://opendataproducts.org/images/social.png" />
     <meta property="og:description" 
