--- a/index.html
+++ b/index.html
@@ -520,7 +520,8 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <p><strong>ODPS YAML Schema:</strong></p>
 
 <ul>
-<li><a href="https://opendataproducts.org/dev/schema/odps.yaml">YAML Schema</a></li>
+<li><a href="https://opendataproducts.org/v4.1rc/schema/odps.yaml">YAML Schema</a></li>
+<li><a href="https://opendataproducts.org/v4.1rc/schema/odps.json">JSON Schema</a></li>
 </ul>
 
 <p><strong>Participate:</strong></p>
