deploy: e43d00e398deb8aa4af26b8a250f71e697033e2a

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <li><a href="https://opendataproducts.org/v4.1rc/schema/odps.json">JSON Schema</a></li>
 </ul>
 
-<p><strong>Participate:</strong></p>
+<p><strong>Participate and contribute:</strong></p>
 
 <ul>
 <li><p><a href="https://github.com/Open-Data-Product-Initiative/v4.1rc/issues">Raise an issue in Github</a></p></li>
