deploy: bddb10223f0d81cb6f24953ecd7569b9a2f176f7

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <li><a href="https://github.com/Open-Data-Product-Initiative/rc">https://github.com/Open-Data-Product-Initiative/v4.1rc</a></li>
 </ul>
 
-<p><strong>ODPS YAML Schema:</strong></p>
+<p><strong>ODPS Schemas:</strong></p>
 
 <ul>
 <li><a href="https://opendataproducts.org/v4.1rc/schema/odps.yaml">YAML Schema</a></li>
