deploy: 88de1de844cd61f05db01579f27454f088da23f5

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <p><strong>Version source:</strong></p>
 
 <ul>
-<li><a href="https://github.com/Open-Data-Product-Initiative/rc">https://github.com/Open-Data-Product-Initiative/v4.1rc</a></li>
+<li><a href="https://github.com/Open-Data-Product-Initiative/v4.1rc">https://github.com/Open-Data-Product-Initiative/v4.1rc</a></li>
 </ul>
 
 <p><strong>ODPS Schemas:</strong></p>
