deploy: ea2559298142bcbea71b83ea64de1141b1cb5248

--- a/index.html
+++ b/index.html
@@ -3741,7 +3741,7 @@ Tooling built on 4.0 will continue to work.</p>
       <span class="na">unit</span><span class="pi">:</span> <span class="s2">"</span><span class="s">downloads"</span>
       <span class="na">target</span><span class="pi">:</span> <span class="m">4000</span>
 </code></pre></div>
-<p>Add the following minimal block under <code>product:</code>  </p>
+<p>Add the block under <code>product:</code> like in the example.  </p>
 <h3 id='summary'>Summary</h3>
 <table><thead>
 <tr>
