--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <p><strong>Migration from 4.0 to 4.1</strong></p>
 
 <ul>
-<li><a href="#migration">Migration guide available</a></li>
+<li><a href="#odps-4-0-4-1-migration-guide">Migration guide available</a></li>
 </ul>
 
 <p><strong>Participate and contribute:</strong></p>
