deploy: c1895a602cbeabfa0f9e93c8ed8f948fea4af7e6

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             content="The Open Data Product Specification (Linux Foundation project) is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products."
         >
 
-    <title>Open (source) Data Product Specification 4.1 Release Candidate Version | Linux Foundation</title>
+    <title>Open (source) Data Product Specification 4.1 Version | Linux Foundation</title>
 
 
     <style media="screen">
@@ -336,7 +336,7 @@
             <a href="#open-data-product-specification" class="toc-h1 toc-link" data-title="OPEN DATA PRODUCT SPECIFICATION">OPEN DATA PRODUCT SPECIFICATION</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#release-candidate-version-for-4-1" class="toc-h2 toc-link" data-title="Release Candidate Version for 4.1">Release Candidate Version for 4.1</a>
+                    <a href="#version-for-4-1" class="toc-h2 toc-link" data-title="Version for 4.1">Version for 4.1</a>
                   </li>
                   <li>
                     <a href="#introduction" class="toc-h2 toc-link" data-title="Introduction">Introduction</a>
@@ -525,7 +525,7 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id='open-data-product-specification'>OPEN DATA PRODUCT SPECIFICATION</h1><h2 id='release-candidate-version-for-4-1'>Release Candidate Version for 4.1</h2>
+        <h1 id='open-data-product-specification'>OPEN DATA PRODUCT SPECIFICATION</h1><h2 id='version-for-4-1'>Version for 4.1</h2>
 <p>The key words “MUST”, “MUST NOT”, “REQUIRED”, “SHALL”, “SHALL NOT”, “SHOULD”, “SHOULD NOT”, “RECOMMENDED”, “NOT RECOMMENDED”, “MAY”, and “OPTIONAL” in this document are to be interpreted as described in BCP 14 [RFC2119] [RFC8174] when, and only when, they appear in all capitals, as shown here.</p>
 
 <p>The specification is shared under <a href='https://www.apache.org/licenses/LICENSE-2.0'>Apache 2.0</a> license. 
@@ -534,14 +534,14 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <p><strong>Version source:</strong></p>
 
 <ul>
-<li><a href="https://github.com/Open-Data-Product-Initiative/v4.1rc">https://github.com/Open-Data-Product-Initiative/v4.1rc</a></li>
+<li><a href="https://github.com/Open-Data-Product-Initiative/v4.1">https://github.com/Open-Data-Product-Initiative/v4.1</a></li>
 </ul>
 
 <p><strong>ODPS Schemas:</strong></p>
 
 <ul>
-<li><a href="https://opendataproducts.org/v4.1rc/schema/odps.yaml">YAML Schema</a></li>
-<li><a href="https://opendataproducts.org/v4.1rc/schema/odps.json">JSON Schema</a></li>
+<li><a href="https://opendataproducts.org/v4.1/schema/odps.yaml">YAML Schema</a></li>
+<li><a href="https://opendataproducts.org/v4.1/schema/odps.json">JSON Schema</a></li>
 </ul>
 
 <p><strong>Migration from 4.0 to 4.1</strong></p>
@@ -553,7 +553,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <p><strong>Participate and contribute:</strong></p>
 
 <ul>
-<li><p><a href="https://github.com/Open-Data-Product-Initiative/v4.1rc/issues">Raise an issue in Github</a></p></li>
+<li><p><a href="https://github.com/Open-Data-Product-Initiative/v4.1/issues">Raise an issue in Github</a></p></li>
 <li><p><a href="https://discord.gg/3EjQf3CD46">Join ODPS Discord Server</a></p></li>
 </ul>
 <h2 id='introduction'>Introduction</h2>
@@ -576,8 +576,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <li>Auditability: Clearly link machine-readable checks to business commitments.</li>
 </ul>
 
-<p><strong>ODPS 4.1 introduces the productStrategy object</strong>, a significant extension that connects data products to business intent, objectives, and KPIs.
-This release makes ODPS the first open specification where data products declare not just what they are but also why they exist and how success is measured.</p>
+<p><strong>ODPS 4.1 introduces the productStrategy object</strong>, a significant extension that connects data products to business intent, objectives, and KPIs. This release makes ODPS the first open specification where data products declare not just what they are but also why they exist and how success is measured.</p>
 <h2 id='howto-odps-knowledge-base'>HowTo - ODPS Knowledge Base</h2>
 <p>The odps‑examples repository serves as a comprehensive knowledge base for using the Open Data Product Specification (ODPS), combining clear FAQs with real-world YAML examples to guide users through practical implementation. Each FAQ entry tackles a specific task—like defining metadata, setting pricing tiers, assigning SLAs, configuring data quality rules, managing access roles, or enabling AI/agent consumption—accompanied by executable YAML snippets and full .yml files. </p>
 
@@ -615,7 +614,7 @@ This release makes ODPS the first open specification where data products declare
 
 <p><img src="images/ODPS-design-971d4b0b.png" alt="odps-model" /></p>
 
-<p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/v4.1rc/issues">raise an issue in Github</a></p>
+<p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/v4.1/issues">raise an issue in Github</a></p>
 
 <p>Be part of the ODPS community! Share your challenges and shape the future of data products on our <a href="https://discord.gg/3EjQf3CD46">Discord</a></p>
 <h2 id='documentation-structure'>Documentation structure</h2>
