--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-8NN2RZ765V');
+      gtag('config', 'G-2BRS2DSVKQ');
     </script>
 
   </head>
