deploy: ec61e659f9eb69b56fb1c5539126be8f1618877d

--- a/index.html
+++ b/index.html
@@ -2614,7 +2614,7 @@ any industry specific needs. </p>
 <tr>
 <td><strong>format</strong></td>
 <td>string</td>
-<td>JSON, XML, CSV, Excel, zip, plain text, GraphQL, MCP</td>
+<td>TOON, JSON, XML, CSV, Excel, zip, plain text, GraphQL, MCP</td>
 <td>Specifies the data format made available through this access channel.</td>
 </tr>
 <tr>
