deploy: eddf77e6d04581a2c2bba55a9463f3ab473d5a06

--- a/index.html
+++ b/index.html
@@ -1817,7 +1817,7 @@ any industry specific needs. </p>
 <tr>
 <td><strong>type</strong></td>
 <td>attribute</td>
-<td>string, one of: <a href="https://docs.soda.io/soda-cl/soda-cl-overview.html">SodaCL</a>, <a href="https://docs.getmontecarlo.com/docs/monitors-as-code">Montecarlo</a>, [DQOps](https://dqops.com/docs/,  <a href="https://docs.greatexpectations.io/docs/reference/learn/data_quality_use_cases/dq_use_cases_lp">Great Expectations</a>, Custom</td>
+<td>string, one of: <a href="https://docs.soda.io/soda-cl/soda-cl-overview.html">SodaCL</a>, <a href="https://docs.getmontecarlo.com/docs/monitors-as-code">Montecarlo</a>, <a href="https://dqops.com/docs/">DQOps</a>,  <a href="https://docs.greatexpectations.io/docs/reference/learn/data_quality_use_cases/dq_use_cases_lp">Great Expectations</a>, Custom</td>
 <td>Data Quality Monitoring as code system name. Use one of the predefined options only. With <em>Custom</em> type you can use your in-house solution.</td>
 </tr>
 <tr>
