deploy: c9a40b5f9b24aa4fbf55cd516c66a517d41558d7

--- a/index.html
+++ b/index.html
@@ -2090,6 +2090,12 @@ any industry specific needs. </p>
 <td>Grouping element which collects together data product pricing plans with business details</td>
 </tr>
 <tr>
+<td><strong>name</strong></td>
+<td>attribute</td>
+<td>string</td>
+<td>Name of the pricing plan.</td>
+</tr>
+<tr>
 <td><strong>priceCurrency</strong></td>
 <td>string</td>
 <td>Use standard formats: <a href="https://en.wikipedia.org/wiki/ISO_4217">ISO 4217</a> currency format e.g. &quot;USD&quot;; Ticker symbol for cryptocurrencies e.g. &quot;BTC&quot;</td>
