--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <ul class="search-results"></ul>
       <ul id="toc" class="toc-list-h1">
           <li>
-            <a href="#open-data-product-specification" class="toc-h1 toc-link" data-title="OPEN DATA PRODUCT SPECIFICATION">OPEN DATA PRODUCT SPECIFICATION</a>
+            <a href="#open-data-product-specification-the-linux-foundation" class="toc-h1 toc-link" data-title="OPEN DATA PRODUCT SPECIFICATION - The Linux Foundation">OPEN DATA PRODUCT SPECIFICATION - The Linux Foundation</a>
               <ul class="toc-list-h2">
                   <li>
                     <a href="#version-4-1" class="toc-h2 toc-link" data-title="Version 4.1">Version 4.1</a>
@@ -525,7 +525,7 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id='open-data-product-specification'>OPEN DATA PRODUCT SPECIFICATION</h1><h2 id='version-4-1'>Version 4.1</h2>
+        <h1 id='open-data-product-specification-the-linux-foundation'>OPEN DATA PRODUCT SPECIFICATION - The Linux Foundation</h1><h2 id='version-4-1'>Version 4.1</h2>
 <p>The key words “MUST”, “MUST NOT”, “REQUIRED”, “SHALL”, “SHALL NOT”, “SHOULD”, “SHOULD NOT”, “RECOMMENDED”, “NOT RECOMMENDED”, “MAY”, and “OPTIONAL” in this document are to be interpreted as described in BCP 14 [RFC2119] [RFC8174] when, and only when, they appear in all capitals, as shown here.</p>
 
 <p>The specification is shared under <a href='https://www.apache.org/licenses/LICENSE-2.0'>Apache 2.0</a> license. 
